--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Florian Frohn
 url: 'https://ffrohn.github.io/'
-baseurl: '/ffrohn.github.io' #change it according to your repository name
+baseurl: '/' #change it according to your repository name
 
 
 # Enable one of these styles by removing #. Style will be applied only after restarting the build or serve.
