--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ tagline: Computer Scientist
 pic: pic6.jpg  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
 #sidebar links
-email: prename.surname [at] mpi-inf.mpg.de
+email: prename.surname [at] cs.rwth-aachen.de
 #phone: +49-241/80-21241
 address: false
 #institution: MPI for Informatics
